--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ individualCharts
     .attr('height', gridSize)
       individualCharts
     .style('fill', d=> {
-        if (d.Type == 'Fatal') {return 'red'}
-        if (d.Type == 'Injury') {return 'orange'}
-        if (d.Type == 'PDO') {return 'gold'}
+        if (d.Type == 'Fatal') {return #c11f1f}
+        if (d.Type == 'Injury') {return #ff8800}
+        if (d.Type == 'PDO') {return #ffc502}
     });
     })
      
