--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@ individualCharts
     .attr('height', gridSize)
       individualCharts
     .style('fill', d=> {
-        if (d.Type == 'Fatal') {return #c11f1f}
-        if (d.Type == 'Injury') {return #ff8800}
-        if (d.Type == 'PDO') {return #ffc502}
+        if (d.Type == 'Fatal') {return '#c11f1f'}
+        if (d.Type == 'Injury') {return '#ff8800'}
+        if (d.Type == 'PDO') {return '#ffc502'}
     });
     })
      
