--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
             .attr('width', gridSize)
             .attr('height', gridSize)
             .style('fill', d => {
-              if (d.Type === 'Fatal') return 'red';
-              if (d.Type === 'Injury') return 'orange';
-              if (d.Type === 'PDO') return 'gold';
+              if (d.Type === 'Fatal') return '#c11f1f';
+              if (d.Type === 'Injury') return '#ff8800';
+              if (d.Type === 'PDO') return '#ffc502';
             })
             .on("mouseover", (event, d) => {
               tooltip.transition()
